tests/baselines/reference/arrayCast.errors.txt
tests/cases/compiler/arrayCast.ts(3,23): error TS2352: Type '{ foo: 文字; }[]' cannot be converted to type '{ id: 数字; }[]'.
  Type '{ foo: 文字; }' is not comparable to type '{ id: 数字; }'.
    Object literal may only specify known properties, and 'foo' does not exist in type '{ id: 数字; }'.


==== tests/cases/compiler/arrayCast.ts (1 errors) ====
    // Should fail. Even though the array is contextually typed with { id: number }[], it still
    // has type { foo: string }[], which is not assignable to { id: number }[].
    <{ id: number; }[]>[{ foo: "s" }];
                          ~~~~~~~~
!!! error TS2352: Type '{ foo: 文字; }[]' cannot be converted to type '{ id: 数字; }[]'.
!!! error TS2352:   Type '{ foo: 文字; }' is not comparable to type '{ id: 数字; }'.
!!! error TS2352:     Object literal may only specify known properties, and 'foo' does not exist in type '{ id: 数字; }'.
    
    // Should succeed, as the {} element causes the type of the array to be {}[]
    <{ id: number; }[]>[{ foo: "s" }, {}]; 